fixed navigation styling flexwrap in tablet view mode

--- a/components/Navigation.module.scss
+++ b/components/Navigation.module.scss
@@ -13,6 +13,9 @@
     list-style: none;
     flex-wrap: wrap;
     align-items: center;
+    @media (min-width: 750px) {
+      flex-wrap: nowrap;
+    }
     .logo__item {
       order: 0;
       width: auto;
